# seqchain-native

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  bench.py  bench_all_hits.py  bench_annotate_saccer3.py  bench_chr1_vs_bowtie.py  bench_guide_design.py  pyproject.toml  recall_test.py  recall_test_large.py
crates/needletail-core/: Cargo.toml
crates/needletail-core/examples/: Annotate_ZM56TN_WLP001_GBK.rs  demo.rs
crates/needletail-core/src/: geometry.rs  lib.rs
crates/needletail-core/src/annotation/: feature.rs  locus.rs  sweep.rs
crates/needletail-core/src/engine/: affine.rs  fm_index.rs  kmer_index.rs  mod.rs  simd_search.rs
crates/needletail-core/src/io/: fastq.rs  genbank.rs  json.rs  mod.rs  parquet_file_sink.rs  parquet_regions.rs  sam.rs
crates/needletail-core/src/models/: genome.rs  preset.rs  region.rs
crates/needletail-core/src/operations/: pam_scanner.rs
crates/needletail-core/src/pipeline/: align.rs  design.rs  design_crispr_library.rs  mod.rs
crates/needletail-server/: Cargo.toml
crates/needletail-server/src/: jobs.rs  main.rs
crates/needletail-server/src/routes/: files.rs  genomes.rs  jobs.rs  methods.rs  mod.rs
crates/needletail-server/src/stores/: genome_store.rs
docs/: MEMORY.md  assessment.md  engine-contract.md  plan.md  strand-integration.md
presets/recognition/: cas12a.yaml  cas12m.yaml  spcas9.yaml
presets/tiling/: saccer3_features.yaml
python/: needletail_guides.py
src/: fm_index.rs  kmer_index.rs  lib.rs  persist.rs  simd_search.rs
tests/: bench_vs_bowtie.py  test_persist.py  test_persist_saccer3.py
