[package]
name = "needletail-core"
version = "0.2.0"
edition = "2021"

[dependencies]
bio      = "1"
anyhow   = "1"
memmap2  = "0.9"
tempfile = "=3.10.1"
rayon    = "1"
rkyv     = { version = "0.8", features = ["bytecheck"] }
libc     = "0.2"
sha2     = "0.10"
arrow    = { version = "54", default-features = false, features = ["ffi"] }
parquet  = { version = "54", default-features = false, features = ["arrow", "snap"] }
gb-io    = "0.7"
flate2   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
