[package]
name = "needletail-server"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "needletail-server"
path = "src/main.rs"

[dependencies]
needletail-core = { path = "../needletail-core" }
axum            = "0.8"
tokio           = { version = "1", features = ["full"] }
dashmap         = "6"
uuid            = { version = "1", features = ["v4"] }
tower-http      = { version = "0.6", features = ["cors"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
axum-extra      = { version = "0.10", features = ["multipart"] }
tempfile        = "3"
tokio-util      = { version = "0.7", features = ["io"] }
